2006-10-19  MINAMI Hirokazu <minami@mistfall.net>

	* xwindw/x_term_manager.c, mlterm/ml_conf_menu.c,
	kiklib/src/kik_pty_stream.c, kiklib/src/kik_pty_bsd.c
	xwindow/x_display.c, xwindow/x_xim.c:
	plugged file descriptor leaks.
	* kiklib/src/kik_file.[ch]: added new functions to
	add/remove close-on-exec flag on a file descriptor.
	(SF Patch #1576044, thanks to Christian Biere)

	* kiklib/src/Makefile.am: increased library version
	to reflact API addtion.

2006-10-14  MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_shortcut.c: fixed typo.
	(SF Bug#1568596, thanks to nakada-san)

	* kiklib/src/kik_util.h: DIGIT_STR_LEN() macro should be safe
	for signed types. (SF Patch#1574241, thanks to Christian Biere)

2006-09-30  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/x_term_manager.c: applied a patch from Nakada-san. (#1534313)

2006-08-13  Seiichi SATO  <me@seiichisato.jp>

	* tool/mlconfig/po/ar.po: Arabic translation contributed by Khaled
	  Hosny.
	* tool/mlconfig/po/LINGUAS: added 'ar'.

2006-05-07  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/version.h.in: 2.9.3 -> 2.9.3 post

2006-05-07  Seiichi SATO  <me@seiichisato.jp>

	* 2.9.3 released.
	  (tag "rel-2_9_3")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 2.9.3
	* configure: re-generated
	* doc/en/PLATFORMS: updated

2006-04-18  Seiichi SATO  <me@seiichisato.jp>

	* tool/mlconfig/po/vi.po: Vietnamese translation contributed by Pham
	Thanh Long.

	* tool/mlconfig/po/LINGUAS: added 'vi'.

2006-04-09  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/x_screen.c (compare_key_state_with_modmap): allowed NULL
	as arguments such as is_shift and is_meta.

	* xwindow/x_screen.c (key_pressed): changed to be more compatibile
	with xterm. (e.g., Shift + F5: ESC [ 15 ; 2 ~)
	(Thanks to Konosuke Watanabe)

	* doc/term/mlterm.ti: added kf13-63.

	* xwindow/x_screen.c (im_changed), xwindow/x_im.h (im_changed):
	u_char -> char
