@@ -1,3 +1,7 @@
+2006-10-24  MINAMI Hirokazu <minami@mistfall.net>
+
+	* xwindow/x_xim.c: always setting close-on-exec flag is harmless.
+
 2006-10-19  MINAMI Hirokazu <minami@mistfall.net>
 
 	* xwindw/x_term_manager.c, mlterm/ml_conf_menu.c,
@@ -9,7 +13,7 @@
 	(SF Patch #1576044, thanks to Christian Biere)
 
 	* kiklib/src/Makefile.am: increased library version
-	to reflact API addtion.
+	to reflect API addtion.
 
 2006-10-14  MINAMI Hirokazu <minami@mistfall.net>
 
